# eymo

./: .gitignore  README.md  eymo.sh  install_bk.sh  install_bk2.sh  prepare.py  requirements.txt
libs/uab/PRACTICA1/: exercici1.py
libs/uab/PRACTICA2/: .gitignore  ejercicio2.py  ejercicio3.py  practica2.py  practica2_entrega.py  pymetrikz.py  utility.py
libs/uab/PRACTICA3/: eines_sessio3.py  exercici1.py  metrikz.py  requirements.txt  sessio3.py
libs/uab/Sessio3/: sessio3.py
minutes/: 02-21-2024.md
src/arduino/: arduino-eymo.h  arduino.ino  utilities.hpp
src/arduino/MotorControlModule/: MotorControlModule.hpp
src/arduino/ObstacleDetectionModule/: ObstacleDetectionModule.h  ObstacleDetectionModule.hpp
src/arduino/ServoMovementModule/: ServoMovementModule.hpp
src/arduino/test/: test.ino
src/cloud/: main.py  req_servers.txt  requirements.txt
src/cloud/actions/: BaseAction.py
src/cloud/routers/: .env.template  ActionRouter.py  Security.py
src/cloud/static/: cert_tst.pem  key_tst.pem  security_tokens.json
src/rpi/: CMakeLists.txt  README.md  main.py  network.py  package.xml
src/rpi/configs/: system_config.py
src/rpi/controllers/: arduino_controller.py  camera_controller.py  screen_controller.py  speaker_controller.py
src/rpi/http_interfaces/: CMakeLists.txt  package.xml
src/rpi/http_services/: package.xml  setup.cfg  setup.py
src/rpi/http_services/http_services/: HttpServiceNode.py
src/rpi/models/: control_mode.py  frame_type.py  location.py  oled_display.py  screen_animation.py  screen_mode.py  setup.py  utils.py  (+1 more)
src/rpi_old/: main.py
(+171 files in other folders)
